# VulkanExperiment

./: .gitignore  .gitmodules  CMakeLists.txt  input_structures.glsl  todo.txt
shaders/: .colored_triangle_mesh.vert.swp  .tex_image.frag.swp  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  compile.sh  gradient.comp  light_culling.comp  line.frag  line.vert  mesh.frag  mesh.vert  shadows.frag  shadows.vert  skybox.frag  skybox.vert  tex_image.frag  text.frag  text.vert  triangle.frag  triangle.vert  wireframe.frag  wireframe.vert
src/: .vk_descriptors.h.swp  .vk_engine.cpp.swp  CMakeLists.txt  entity_manager.cpp  entity_manager.h  game.cpp  game.h  main.cpp  os.h  state.cpp  state.h  timer.h  vk_descriptors.cpp  vk_descriptors.h  vk_dispatch.cpp  vk_dispatch.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/entities/: ent_components.h  ent_manager.cpp  ent_manager.h
src/physics/: CMakeLists.txt  phy_collisions.cpp  phy_collisions.h  phy_types.h  phy_util.cpp  phy_util.h  phys_debug.cpp  phys_debug.h  phys_main.cpp  phys_main.h
src/renderer/: .vk_descriptors.cpp.swp  .vk_descriptors.h.swp  .vk_engine.cpp.swp  .vk_engine.h.swp  .vk_pipelines.cpp.swp  .vk_pipelines.h.swp  CMakeLists.txt  camera.h  vk_buffers.cpp  vk_buffers.h  vk_context.cpp  vk_context.h  vk_descriptors.cpp  vk_descriptors.h  vk_dispatch.cpp  vk_dispatch.h  vk_engine.cpp  vk_engine.h  vk_gltf.cpp  vk_gltf.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_suballocator.cpp  vk_suballocator.h  vk_text.cpp  vk_text.h  vk_types.h
